# python-cli-starter

./: .gitignore  Dockerfile  Dockerfile.local  docker-compose.yml  pyproject.toml
